[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "my-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "my-redis-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4.2.7", features = ["derive"] }
tokio-stream = "0.1"
async-stream = "0.3.0"
